<resources>
    <string name="title_activity_maps">Map</string>
    <string name="app_name">El Camionero</string>
    <string name="bienvenido">Haga click sobre la pantalla para ir a la cámara.</string>
    <string name="instrucciones">Enfoque el camión dentro del cuadrado guía y presione la pantalla.</string>
    <string name="fallo_tomar_foto">Lo siento, no pude tomar la foto, intenta nuevamente. :(</string>
    <string name="foto_titulo">Fotografía analizada</string>
    <string name="texto_titulo">Texto extraído</string>
    <string name="audio_titulo">Escuchar audio</string>
    <string name="sin_permiso">Lo siento, no dispongo de los permisos para operar la cámara. :(</string>
    <string name="cuauti">Politécnico a Cuautitlán Izcalli Infonavit Norte</string>
    <string name="maria">Politécnico a Monte María</string>
    <string name="ixtacala">Politécnico a San Juan Ixtacala</string>
    <string name="tlane">Politécnico a Tlalnepantla</string>
    <string name="temoaya">Politécnico a Temoaya</string>
    <string name="ruta">Elige una ruta para conocer las paradas</string>
    <string name="la_ruta_es">Las paradas de la ruta</string>
    <string name="son">son</string>
</resources>
