<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#363636"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_media_pause" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="#363636"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#363636"
            android:orientation="vertical">

            <Button
                android:id="@+id/cuauti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#363636"
                android:text="@string/cuauti"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/maria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#363636"
                android:text="@string/maria"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/ixtacala"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#363636"
                android:text="@string/ixtacala"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/tlalnepantla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#363636"
                android:text="@string/tlane"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/temoaya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#363636"
                android:text="@string/temoaya"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="25sp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>